# HttpServer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: client.cpp  client.hpp  mainClient.cpp  mainServer.cpp  server.cpp  server.hpp  source.cpp  types.hpp
